--- a/index.html
+++ b/index.html
@@ -35,47 +35,47 @@
       <div class="row time-block" id="nineAM">
         <p class="hour col-1">9AM</p>
         <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1"><span class="oi oi-folder"></span></button>
+        <button class="saveBtn col-1"><span class="i oi oi-folder"></span></button>
       </div>
       <div class="row time-block" id="tenAM">
         <p class="hour col-1">10AM</p>
         <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1"><span class="oi oi-folder"></span></button>
+        <button class="saveBtn col-1"><span class="i oi oi-folder"></span></button>
       </div>
       <div class="row time-block" id="elevenAM">
         <p class="hour col-1">11AM</p>
         <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1"><span class="oi oi-folder"></span></button>
+        <button class="saveBtn col-1"><span class="i oi oi-folder"></span></button>
       </div>
       <div class="row time-block" id="twelvePM">
         <p class="hour col-1">12PM</p>
         <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1"><span class="oi oi-folder"></span></button>
+        <button class="saveBtn col-1"><span class="i oi oi-folder"></span></button>
       </div>
       <div class="row time-block" id="onePM">
         <p class="hour col-1">1PM</p>
         <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1"><span class="oi oi-folder"></span></button>
+        <button class="saveBtn col-1"><span class="i oi oi-folder"></span></button>
       </div>
       <div class="row time-block" id="twoPM">
         <p class="hour col-1">2PM</p>
         <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1"><span class="oi oi-folder"></span></button>
+        <button class="saveBtn col-1"><span class="i oi oi-folder"></span></button>
       </div>
       <div class="row time-block" id="threePM">
         <p class="hour col-1">3PM</p>
         <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1"><span class="oi oi-folder"></span></button>
+        <button class="saveBtn col-1"><span class="i oi oi-folder"></span></button>
       </div>
       <div class="row time-block" id="fourPM">
         <p class="hour col-1">4PM</p>
         <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1"><span class="oi oi-folder"></span></button>
+        <button class="saveBtn col-1"><span class="i oi oi-folder"></span></button>
       </div>
       <div class="row time-block" id="fivePM">
         <p class="hour col-1">5PM</p>
         <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1"><span class="oi oi-folder"></span></button>
+        <button class="saveBtn col-1"><span class="i oi oi-folder"></span></button>
       </div>
     </div>
 
